--- a/music-server/src/main/resources/application-dev.properties
+++ b/music-server/src/main/resources/application-dev.properties
@@ -1,14 +1,22 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/tp_music?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-minio.endpoint=http://localhost:9000
-minio.access-key=root
-minio.secret-key=123456789
-minio.bucket-name=user01
-# 文件上传的大小
-spring.servlet.multipart.max-file-size= 50MB
-# 文件上传的最大请求大小
-spring.servlet.multipart.max-request-size= 50MB
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+spring.redis.password=${REDIS_PASSWORD}
+spring.redis.database=0
+spring.redis.timeout=1800000
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=0
 
+minio.endpoint=${MINIO_ENDPOINT}
+minio.access-key=${MINIO_ACCESS_KEY}
+minio.secret-key=${MINIO_SECRET_KEY}
+minio.bucket-name=${MINIO_BUCKET_NAME}
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
