--- a/music-server/src/main/resources/application-prod.properties
+++ b/music-server/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://121.43.39.136:3306/tp_music?serverTimezone=GMT%2B8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
